--- a/res/layout/layout_list_row.xml
+++ b/res/layout/layout_list_row.xml
@@ -16,6 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -25,13 +26,48 @@
             android:text="Mapplai Wineshop"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#414141" />
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:src="@drawable/location_place" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="west mambalam, chennai"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#818181" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tags:"
+			android:textSize="11sp"
+            android:textColor="#308ae2" 
+            android:layout_marginRight="5dp"/>
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="whisky , brandy , rum , gin"
+			android:textSize="10sp"
+            android:textColor="#414141" />
     </LinearLayout>
 
 </LinearLayout>
